import crossConfigAliasedPluginsConfig from './projects/cross-config-aliased-plugins.eslint.config.js';
import { testProject } from './utils.js';

testProject('cross-config-aliased-plugins', crossConfigAliasedPluginsConfig);
