// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cross-config-aliased-plugins > cross-config-aliased-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [
      "@eslint-react/dom/no-find-dom-node",
      "@eslint-react/dom/no-namespace",
    ],
    "not-implemented": [],
    "nursery": [],
    "type-aware": [],
    "unsupported": [],
  },
  "warnings": [],
}
`;

exports[`cross-config-aliased-plugins --js-plugins > cross-config-aliased-plugins--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "jsPlugins": [
      "@eslint-react/eslint-plugin-dom",
    ],
    "plugins": [],
    "rules": {
      "@eslint-react/dom/no-find-dom-node": "error",
      "@eslint-react/dom/no-namespace": "warn",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [],
    "nursery": [],
    "type-aware": [],
    "unsupported": [],
  },
  "warnings": [],
}
`;

exports[`cross-config-aliased-plugins --type-aware > cross-config-aliased-plugins--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [
      "@eslint-react/dom/no-find-dom-node",
      "@eslint-react/dom/no-namespace",
    ],
    "not-implemented": [],
    "nursery": [],
    "type-aware": [],
    "unsupported": [],
  },
  "warnings": [],
}
`;

exports[`cross-config-aliased-plugins merge > cross-config-aliased-plugins--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
    },
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [
      "@eslint-react/dom/no-find-dom-node",
      "@eslint-react/dom/no-namespace",
    ],
    "not-implemented": [],
    "nursery": [],
    "type-aware": [],
    "unsupported": [],
  },
  "warnings": [],
}
`;
